@@ -133,7 +133,8 @@ public class IconBar {
     this.currentEnabler = enabler;
     refreshEnableItems();
   }
-  
+
+    // dead
   public IconBarEnabler getCurrentEnabler() {
   	return this.currentEnabler;
   }
@@ -202,10 +203,12 @@ public class IconBar {
     createBufferedToolItem(toolBar,SWT.PUSH,"run","cb_run","iconBar.run.tooltip");
     createBufferedToolItem(toolBar,SWT.PUSH,"host","cb_host","iconBar.host.tooltip");
     createBufferedToolItem(toolBar,SWT.PUSH,"publish","cb_publish","iconBar.publish.tooltip");
+    new BufferedToolItem(toolBar,SWT.SEPARATOR);
     createBufferedToolItem(toolBar,SWT.PUSH,"start","cb_start","iconBar.start.tooltip");
     createBufferedToolItem(toolBar,SWT.PUSH,"stop","cb_stop","iconBar.stop.tooltip");
     createBufferedToolItem(toolBar,SWT.PUSH,"remove","cb_remove","iconBar.remove.tooltip");
-    
+    new BufferedToolItem(toolBar,SWT.SEPARATOR);
+    createBufferedToolItem(toolBar,SWT.PUSH,"editcolumns","cb_editcolumns","iconBar.editcolumns.tooltip");
 
     for (Iterator iter = listeners.iterator(); iter.hasNext();) {
     	try {
